HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainMissing/Source/Main.uv
//! Rejected executable specimen for a missing main procedure.

public procedure helper() -> i32 {
    return 0
}
